--- a/css/pages/list.css
+++ b/css/pages/list.css
@@ -72,6 +72,24 @@
     align-items: center;
     gap: 1rem;
 }
+.page-list .level-container .level .packs {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.4em;
+}
+.page-list .level-container .level .packs .tag {
+  display: flex;
+  flex-shrink: 0;
+  background-size: 100% 100% !important;
+}
+.tag p {
+  font-family: "Lexend Deca", sans-serif;
+  display:block;
+  border-radius: 14px;
+  padding: 7px;
+  mix-blend-mode: difference;
+  color: rgb(128, 128, 128);
+}
 .page-list .level-container .level .records {
     table-layout: fixed;
 }
